src/objects/Family_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>Family_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>Family_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>FDID-{0000000000}</displayFormat>
        <label>Family Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Client_Family_Detail</fullName>
        <active>true</active>
        <description>Client ID and Related To person should not be same.</description>
        <errorConditionFormula>Client__c   =  Related_To__c</errorConditionFormula>
        <errorDisplayField>Related_To__c</errorDisplayField>
        <errorMessage>This Id can not be same as Client.</errorMessage>
    </validationRules>
</CustomObject>